// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders with data 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 1334,
    }
  }
  virtual={undefined}
>
  <View
    style={
      Object {
        "flex": 1,
        "height": 1334,
      }
    }
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
      virtual={undefined}
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "position": "relative",
          }
        }
      >
        <View>
          <View
            collapsable={undefined}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "left": 0,
                "opacity": 0.8,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "scale": 0.8,
                  },
                ],
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#fff",
                    "borderBottomWidth": 0.5,
                    "borderColor": "#ccc",
                    "borderLeftWidth": 0.5,
                    "borderRadius": 2,
                    "borderRightWidth": 0.5,
                    "borderTopWidth": 0.5,
                    "elevation": 3,
                    "flex": 1,
                    "flexWrap": "nowrap",
                    "marginBottom": 5,
                    "marginLeft": 2,
                    "marginRight": 2,
                    "marginTop": 5,
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.1,
                    "shadowRadius": 1.5,
                  },
                  Object {
                    "backgroundColor": "transparent",
                    "overflow": "hidden",
                  },
                ]
              }
              virtual={undefined}
            >
              <RCTScrollView
                style={
                  Object {
                    "flex": 1,
                    "flexGrow": 0,
                    "maxHeight": 500,
                  }
                }
              >
                <View>
                  <Image
                    source={
                      Object {
                        "uri": "B",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "white",
                        "borderRadius": 20,
                        "flex": 1,
                        "height": 500,
                        "resizeMode": "contain",
                        "width": null,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {},
                        Object {
                          "backgroundColor": "rgba(0, 0, 0, 0.3)",
                          "borderBottomLeftRadius": 20,
                          "borderBottomRightRadius": 20,
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "left": 0,
                          "padding": 10,
                          "position": "absolute",
                          "right": 0,
                          "top": 456,
                        },
                      ]
                    }
                    virtual={undefined}
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flexDirection": "row",
                          },
                        ]
                      }
                      virtual={undefined}
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        bold={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#000",
                              "fontFamily": "System",
                              "fontSize": 16,
                            },
                            Object {
                              "color": "#fff",
                            },
                          ]
                        }
                        uppercase={false}
                        virtual={undefined}
                      >
                        B
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#000",
                              "fontFamily": "System",
                              "fontSize": 16,
                            },
                            Object {
                              "color": "#fff",
                            },
                          ]
                        }
                        uppercase={false}
                        virtual={undefined}
                      >
                        , 1
                      </Text>
                    </View>
                    <View
                      collapsable={undefined}
                      style={
                        Object {
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "scale": 0.9,
                            },
                          ],
                        }
                      }
                    >
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        collapsable={undefined}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": undefined,
                                "fontSize": 12,
                              },
                              Array [
                                Object {
                                  "color": "#000",
                                  "fontSize": 30,
                                },
                                Object {
                                  "color": "#000",
                                  "fontSize": 30,
                                },
                                Object {
                                  "color": "white",
                                  "fontSize": 24,
                                  "padding": 0,
                                },
                              ],
                              Object {
                                "fontFamily": "Ionicons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                            ]
                          }
                          virtual={undefined}
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    details={true}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#fff",
                          "borderRadius": 2,
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingLeft": 15,
                          "paddingRight": 15,
                          "paddingTop": 10,
                        },
                        Object {
                          "backgroundColor": "white",
                          "flexDirection": "column",
                          "maxHeight": 400,
                        },
                      ]
                    }
                    virtual={undefined}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#000",
                          "fontSize": 21,
                          "lineHeight": 22,
                        }
                      }
                      virtual={undefined}
                    >
                      About B
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      left={true}
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "System",
                          "fontSize": 16,
                        }
                      }
                      uppercase={false}
                      virtual={undefined}
                    >
                      Bio:B
                    </Text>
                  </View>
                </View>
              </RCTScrollView>
            </View>
          </View>
          <View
            collapsable={undefined}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#fff",
                    "borderBottomWidth": 0.5,
                    "borderColor": "#ccc",
                    "borderLeftWidth": 0.5,
                    "borderRadius": 2,
                    "borderRightWidth": 0.5,
                    "borderTopWidth": 0.5,
                    "elevation": 3,
                    "flex": 1,
                    "flexWrap": "nowrap",
                    "marginBottom": 5,
                    "marginLeft": 2,
                    "marginRight": 2,
                    "marginTop": 5,
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.1,
                    "shadowRadius": 1.5,
                  },
                  Object {
                    "backgroundColor": "transparent",
                    "overflow": "hidden",
                  },
                ]
              }
              virtual={undefined}
            >
              <RCTScrollView
                style={
                  Object {
                    "flex": 1,
                    "flexGrow": 0,
                    "maxHeight": 500,
                  }
                }
              >
                <View>
                  <Image
                    source={
                      Object {
                        "uri": "A",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "white",
                        "borderRadius": 20,
                        "flex": 1,
                        "height": 500,
                        "resizeMode": "contain",
                        "width": null,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {},
                        Object {
                          "backgroundColor": "rgba(0, 0, 0, 0.3)",
                          "borderBottomLeftRadius": 20,
                          "borderBottomRightRadius": 20,
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "left": 0,
                          "padding": 10,
                          "position": "absolute",
                          "right": 0,
                          "top": 456,
                        },
                      ]
                    }
                    virtual={undefined}
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flexDirection": "row",
                          },
                        ]
                      }
                      virtual={undefined}
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        bold={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#000",
                              "fontFamily": "System",
                              "fontSize": 16,
                            },
                            Object {
                              "color": "#fff",
                            },
                          ]
                        }
                        uppercase={false}
                        virtual={undefined}
                      >
                        A
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#000",
                              "fontFamily": "System",
                              "fontSize": 16,
                            },
                            Object {
                              "color": "#fff",
                            },
                          ]
                        }
                        uppercase={false}
                        virtual={undefined}
                      >
                        , 0
                      </Text>
                    </View>
                    <View
                      collapsable={undefined}
                      style={
                        Object {
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "scale": 0.9,
                            },
                          ],
                        }
                      }
                    >
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        collapsable={undefined}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": undefined,
                                "fontSize": 12,
                              },
                              Array [
                                Object {
                                  "color": "#000",
                                  "fontSize": 30,
                                },
                                Object {
                                  "color": "#000",
                                  "fontSize": 30,
                                },
                                Object {
                                  "color": "white",
                                  "fontSize": 24,
                                  "padding": 0,
                                },
                              ],
                              Object {
                                "fontFamily": "Ionicons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                            ]
                          }
                          virtual={undefined}
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    details={true}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#fff",
                          "borderRadius": 2,
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingLeft": 15,
                          "paddingRight": 15,
                          "paddingTop": 10,
                        },
                        Object {
                          "backgroundColor": "white",
                          "flexDirection": "column",
                          "maxHeight": 400,
                        },
                      ]
                    }
                    virtual={undefined}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#000",
                          "fontSize": 21,
                          "lineHeight": 22,
                        }
                      }
                      virtual={undefined}
                    >
                      About A
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      left={true}
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "System",
                          "fontSize": 16,
                        }
                      }
                      uppercase={false}
                      virtual={undefined}
                    >
                      Bio:A
                    </Text>
                  </View>
                </View>
              </RCTScrollView>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "bottom": 30,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "padding": 15,
            "position": "absolute",
            "right": 0,
          },
        ]
      }
      virtual={undefined}
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="pass_button"
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderBottomWidth": 1,
            "borderColor": "#d9534f",
            "borderLeftWidth": 1,
            "borderRadius": 57,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "borderWidth": 1,
            "elevation": null,
            "flexDirection": "row",
            "height": 45,
            "justifyContent": "space-between",
            "opacity": 1,
            "paddingBottom": 6,
            "paddingTop": 6,
            "shadowColor": null,
            "shadowOffset": null,
            "shadowOpacity": null,
            "shadowRadius": null,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#000",
                  "fontSize": 30,
                },
                Object {
                  "color": "#d9534f",
                  "fontSize": 24,
                  "marginLeft": 16,
                  "marginRight": 0,
                  "paddingTop": 2,
                },
              ],
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
          virtual={undefined}
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#d9534f",
              "fontFamily": "System",
              "fontSize": 16.5,
              "lineHeight": 19,
              "marginLeft": 0,
              "marginRight": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
            }
          }
          uppercase={false}
          virtual={undefined}
        >
          Pass
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="like_button"
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#007aff",
            "borderBottomWidth": null,
            "borderColor": "#007aff",
            "borderLeftWidth": null,
            "borderRadius": 57,
            "borderRightWidth": null,
            "borderTopWidth": null,
            "elevation": 2,
            "flexDirection": "row",
            "height": 45,
            "justifyContent": "space-between",
            "opacity": 1,
            "paddingBottom": 6,
            "paddingTop": 6,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#fff",
              "fontFamily": "System",
              "fontSize": 16.5,
              "lineHeight": 19,
              "marginLeft": 0,
              "marginRight": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
            }
          }
          uppercase={false}
          virtual={undefined}
        >
          Like
        </Text>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#000",
                  "fontSize": 30,
                },
                Object {
                  "color": "#fff",
                  "fontSize": 24,
                  "marginLeft": 0,
                  "marginRight": 16,
                  "paddingTop": 2,
                },
              ],
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
          virtual={undefined}
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Home /> should render when empty 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "height": 1334,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
  virtual={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#000",
        "fontFamily": "System",
        "fontSize": 16,
      }
    }
    uppercase={false}
    virtual={undefined}
  >
    No recommendations left! :(
  </Text>
</View>
`;

exports[`<Home /> should render with error 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "height": 1334,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
  virtual={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#000",
        "fontFamily": "System",
        "fontSize": 16,
      }
    }
    uppercase={false}
    virtual={undefined}
  >
    There was an error loading recommendations
  </Text>
</View>
`;

exports[`<Home /> should render with loading 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "height": 1334,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
  virtual={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#000",
        "fontFamily": "System",
        "fontSize": 16,
      }
    }
    uppercase={false}
    virtual={undefined}
  >
    Loading...
  </Text>
</View>
`;
